Sec 1 - Lec 14 arrow funcs 2

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
     "letconst": "babel src/playground/es6-let-const.js --out-file=public/scripts/playground/scrap.js --presets=env,react --watch",
-    "arrowfuncs": "babel src/playground/es6-arrow-function.js --out-file=public/scripts/playground/scrap.js --presets=env,react --watch"
+    "arrowfuncs": "babel src/playground/es6-arrow-function.js --out-file=public/scripts/playground/scrap.js --presets=env,react --watch",
+    "arrowfuncs2": "babel src/playground/es6-arrow-function2.js --out-file=public/scripts/playground/scrap.js --presets=env,react --watch"
   },
   "dependencies": {
     "babel-preset-env": "1.5.2",
