--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
+    "builditvisibility": "babel src/playground/build-it-visible.js --out-file=public/scripts/playground/scrap.js --presets=env,react --watch",
     "letconst": "babel src/playground/es6-let-const.js --out-file=public/scripts/playground/scrap.js --presets=env,react --watch",
     "arrowfuncs": "babel src/playground/es6-arrow-function.js --out-file=public/scripts/playground/scrap.js --presets=env,react --watch",
     "arrowfuncs2": "babel src/playground/es6-arrow-function2.js --out-file=public/scripts/playground/scrap.js --presets=env,react --watch"
