--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
+    "serve": "live-server public",
     "es6-classes1": "babel src/playground/es6-classes1.js --out-file=public/scripts/app.js --presets=env,react --watch",
     "builditvisibility": "babel src/playground/build-it-visible.js --out-file=public/scripts/app.js --presets=env,react --watch",
     "builditvisibility2": "babel src/playground/build-it-visible-2.js --out-file=public/scripts/app.js --presets=env,react --watch",
@@ -17,7 +18,9 @@
     "counter": "babel src/playground/counter.js --out-file=public/scripts/app.js --presets=env,react --watch"
   },
   "dependencies": {
+    "babel-cli": "^6.24.1",
     "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1"
+    "babel-preset-react": "6.24.1",
+    "live-server": "^1.2.1"
   }
 }
