--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "live-server public",
-    "build": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
+    "build": "webpack --watch",
+    "build-app": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
     "build-es6-classes1": "babel src/playground/es6-classes1.js --out-file=public/scripts/app.js --presets=env,react --watch",
     "build-builditvisibility": "babel src/playground/build-it-visible.js --out-file=public/scripts/app.js --presets=env,react --watch",
     "build-builditvisibility2": "babel src/playground/build-it-visible-2.js --out-file=public/scripts/app.js --presets=env,react --watch",
@@ -21,6 +22,7 @@
     "babel-cli": "^6.24.1",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "webpack": "^3.1.0"
   }
 }
