--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "live-server public",
-    "dev-server": "webpack-dev-server",
+    "dev-server": "webpack serve --mode=development",
     "build": "webpack",
     "build-app": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
     "build-es6-classes1": "babel src/playground/es6-classes1.js --out-file=public/scripts/app.js --presets=env,react --watch",
@@ -21,21 +21,24 @@
     "build-class-syntax": "babel src/playground/classSyntax.js --out-file=public/scripts/app.js --presets=env,react --watch"
   },
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1",
-    "css-loader": "^0.28.4",
-    "live-server": "^1.2.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-modal": "^2.2.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "validator": "^8.0.0",
-    "webpack": "^3.1.0",
-    "webpack-dev-server": "^2.5.1"
+    "css-loader": "^5.0.1",
+    "node-sass": "^5.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "validator": "^13.5.2",
+    "webpack": "^5.11.1",
+    "webpack-dev-server": "^3.11.1"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.3.1"
   }
 }
